feat: cleaning all data in eda notebook
get all incrementals from S3, clean and parse nested fields

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -7,13 +7,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import re\n",
+    "from urllib.parse import urlparse, parse_qs\n",
+    "\n",
     "import pandas as pd\n",
+    "import boto3\n",
     "\n",
     "pd.set_option('display.max_columns', None)\n",
     "pd.set_option('display.max_rows', 200)\n",
-    "pd.set_option('display.max_colwidth', 100)\n",
+    "pd.set_option('display.max_colwidth', 200)\n",
     "\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "%load_ext dotenv\n",
+    "%dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8941de17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s3 = boto3.client('s3')\n",
+    "bucket = os.environ[\"OUTPUT_BUCKET\"]\n",
+    "prefix = os.environ[\"OUTPUT_PREFIX\"]\n",
+    "\n",
+    "def get_df_from_s3_jsonl(bucket: str, key: str) -> pd.DataFrame:\n",
+    "    df_list = []\n",
+    "    for name in s3.list_objects_v2(Bucket=bucket, Prefix=prefix)['Contents']:\n",
+    "        key = name['Key']\n",
+    "        if key.endswith('.jsonl'):\n",
+    "            obj = s3.get_object(Bucket=bucket, Key=key)\n",
+    "            df_list.append(pd.read_json(obj['Body'], lines=True))\n",
+    "\n",
+    "    return pd.concat(df_list, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4bd0880",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orig_df = get_df_from_s3_jsonl(bucket, prefix)\n",
+    "df = orig_df.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "178ba6aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df = orig_df.copy()\n",
+    "\n",
+    "# df['id'] = df.url.apply(lambda x: urlparse(x).path.replace('/', '').split('-')[-1]).astype(int)\n",
+    "# df.loc[df.id.duplicated(keep=False), ['url', 'id', 'stats_raw']].sort_values('id')"
    ]
   },
   {
@@ -23,33 +76,124 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "orig_df = pd.read_json('../ads.jsonl', lines=True)\n",
-    "df = orig_df.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "63f60369",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def parse_price(price_raw):\n",
-    "    return int(price_raw.replace(' ', '').replace('€', ''))\n",
+    "df = orig_df.copy()\n",
     "\n",
-    "def parse_price_per_m2(price_raw):\n",
-    "    return int(price_raw.replace(' ', '').replace('(', '').replace('€/m²)', ''))"
+    "df['id'] = df.url.apply(lambda x: urlparse(x).path.replace('/', '').split('-')[-1]).astype(int)\n",
+    "df = df.drop_duplicates(subset=[\"id\"], keep=\"first\")\n",
+    "\n",
+    "num_only = re.compile(r'\\d+')\n",
+    "df['is_project'] = df.project_name.notna()\n",
+    "df['price'] = df.price_raw.apply(lambda x: \"\".join(re.findall(num_only, x))).astype(int)\n",
+    "df['price_per_m2'] = df.price_per_m2_raw.apply(lambda x: \"\".join(re.findall(num_only, x))).astype(int)\n",
+    "\n",
+    "details_df = pd.json_normalize(df['details_raw'])\n",
+    "stats_df = pd.json_normalize(df['stats_raw'])\n",
+    "address_link = df['precise_address_link']\n",
+    "\n",
+    "df = df.drop([\n",
+    "    'details_raw',\n",
+    "    'stats_raw',\n",
+    "    'precise_address_link',\n",
+    "    'decription',\n",
+    "    'price_raw',\n",
+    "    'price_per_m2_raw'\n",
+    "], axis=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67993d3a",
+   "id": "9d1105b4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['price'] = df['price_raw'].apply(parse_price)\n",
-    "df['price_per_m2'] = df['price_per_m2_raw'].apply(parse_price_per_m2)"
+    "def extract_lon_lat(precise_address_link: str):\n",
+    "    result = {\"lon\": None, \"lat\": None}\n",
+    "\n",
+    "    if precise_address_link:\n",
+    "\n",
+    "        query = parse_qs(urlparse(precise_address_link).query)\n",
+    "        coords = query.get('query', [None])[0]\n",
+    "\n",
+    "        if coords:\n",
+    "            result['lon'], result['lat'] = coords.split(\",\")\n",
+    "\n",
+    "    return pd.Series(result)\n",
+    "\n",
+    "lon_lat_df = address_link.apply(extract_lon_lat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03317a53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "details_df = details_df.rename(columns=lambda col: col.strip().lower().replace(\" \", \"_\").replace(\".\", \"\"))\n",
+    "# Cast ints\n",
+    "for col in ['house_no', 'flat_no', 'number_of_rooms', 'floor', 'no_of_floors', 'build_year']:\n",
+    "    details_df[col] = details_df[col].astype(int, errors='ignore')\n",
+    "\n",
+    "# Clean and cast float\n",
+    "details_df['area'] = details_df['area'].apply(lambda x: float(x.replace(\" m²\", \"\").replace(\",\", \".\")) if pd.notna(x) else None)\n",
+    "\n",
+    "def make_booleans_from_list_of_features(item, features):\n",
+    "    match item:\n",
+    "        case list():\n",
+    "            return pd.Series({feature: feature in item for feature in features})\n",
+    "        case str():\n",
+    "            return pd.Series({feature: feature == item for feature in features})\n",
+    "        case _ if pd.isna(item):\n",
+    "            return pd.Series({feature: False for feature in features})\n",
+    "\n",
+    "features_df_list = []\n",
+    "for col in ['description', 'additional_premises', 'additional_equipment', 'security']:\n",
+    "    features = details_df[col].dropna().explode().unique()\n",
+    "    features_df = details_df[col].apply(lambda x: make_booleans_from_list_of_features(x, features))\n",
+    "    features_df = features_df.rename(columns=lambda c: c.strip().lower().replace(\" \", \"_\").replace(\".\", \"\"))\n",
+    "    features_df = features_df.add_prefix(f\"{col}_\")\n",
+    "    features_df_list.append(features_df)\n",
+    "    details_df = details_df.drop(columns=[col])\n",
+    "\n",
+    "features_df = pd.concat(features_df_list, axis=1)\n",
+    "details_df = pd.concat([details_df, features_df], axis=1)\n",
+    "details_df = details_df.add_prefix(\"details_\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcf91040",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats_df = stats_df.rename(columns=lambda col: col.strip().lower().replace(\" \", \"_\"))\n",
+    "\n",
+    "stats_df[\"created\"] = pd.to_datetime(stats_df[\"created\"], format=\"%Y-%m-%d\")\n",
+    "stats_df[\"edited\"] = pd.to_datetime(stats_df[\"edited\"], format=\"%Y-%m-%d\")\n",
+    "stats_df[\"valid_till\"] = pd.to_datetime(stats_df[\"valid_till\"], format=\"%Y-%m-%d\")\n",
+    "stats_df[\"saved\"] = stats_df[\"saved\"].astype(int, errors='ignore')\n",
+    "\n",
+    "view_stats_df = stats_df[\"viewed\"].apply(lambda x: pd.Series(x.replace(\" (totally/today)\", \"\").split(\"/\"), index=[\"viewed_total\", \"viewed_today\"]).astype(int, errors='ignore'))\n",
+    "stats_df = pd.concat([stats_df.drop(columns=[\"viewed\"]), view_stats_df], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1054e17f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([\n",
+    "    df,\n",
+    "    lon_lat_df,\n",
+    "    details_df,\n",
+    "    stats_df,\n",
+    "], axis=1)\n",
+    "\n",
+    "df = df.convert_dtypes()"
    ]
   },
   {
@@ -59,8 +203,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "projects_df = df.loc[df.project_name.notnull()]\n",
-    "second_hand_df = df.loc[df.project_name.isnull()]\n",
+    "projects_df = df.loc[df.is_project]\n",
+    "second_hand_df = df.loc[~df.is_project]\n",
     "projects_df.shape, second_hand_df.shape"
    ]
   },
